--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -43,15 +43,15 @@
         <link href="/assets/lib/jquery-bxslider/jquery-bxslider.css" rel="stylesheet" />
     }
     <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
-    
+
     <link rel="stylesheet" type="text/css" href="/assets/css/@(themeOptionText+".css")" />
     <link rel="dns-prefetch" href="//v2.zopim.com/">
     <link rel="dns-prefetch" href="//www.google-analytics.com/">
     <link rel="dns-prefetch" href="//fonts.googleapis.com/">
     <link rel="dns-prefetch" href="//www.facebook.com/">
     <link href='/static/css' rel='stylesheet' type='text/css'>
-    <link href="/assets/css/blue-style.css" rel="stylesheet" />
-    @*<link href="/assets/css/Green-style.css" rel="stylesheet" />*@
+    @*<link href="/assets/css/blue-style.css" rel="stylesheet" />*@
+    <link href="/assets/css/Green-style.css" rel="stylesheet" />
 
 </head>
 <body class="@themeOptionText">
@@ -224,61 +224,61 @@
                 }
                 else
                 {
-                <div class="col-md-4">
+                    <div class="col-md-4">
 
-                    <div class="address-box">
+                        <div class="address-box">
 
-                        <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
-                        <div class="adrct">
-                            <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
-                            <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
+                            <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
+                            <div class="adrct">
+                                <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
+                                <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
 
-                            @if (!string.IsNullOrEmpty(commonInfo.Email))
-                            {
-                                <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
-                            }
-
-                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                            {
-                                <div class="tit-name">Skype:</div>
-                                <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
-                            }
-
-                        </div>
-                        @{
-
-                            string thisUrl = Request.Url.AbsoluteUri;
-                            <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
-                            <div class="social-link">
-                                @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                @if (!string.IsNullOrEmpty(commonInfo.Email))
                                 {
-                                    <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                    <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
                                 }
+
                                 @if (!string.IsNullOrEmpty(commonInfo.Skype))
                                 {
-                                    <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                    <div class="tit-name">Skype:</div>
+                                    <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
                                 }
-                                <a href="//plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
-                                <a href="//pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
-                                <a href="//www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+
                             </div>
-                        }
+                            @{
+
+                                string thisUrl = Request.Url.AbsoluteUri;
+                                <div class="introduce-title" style="        margin-top: 10px;">Chia sẻ với bạn bè</div>
+                                <div class="social-link">
+                                    @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                    {
+                                        <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                    }
+                                    @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                    {
+                                        <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                    }
+                                    <a href="//plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
+                                    <a href="//pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
+                                    <a href="//www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+                                </div>
+                            }
+                        </div>
+                        <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+                        <!-- Histats.com  START  (aync)-->
+                        <script type="text/javascript">
+                            var _Hasync = _Hasync || [];
+                            _Hasync.push(['Histats.start', '1,4138849,4,428,112,75,00001111']);
+                            _Hasync.push(['Histats.fasi', '1']);
+                            _Hasync.push(['Histats.track_hits', '']);
+                            (function () {
+                                var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+                                hs.src = ('//s10.histats.com/js15_as.js');
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+                            })();</script>
+                        <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4138849&101" alt="" border="0"></a></noscript>
+                        <!-- Histats.com  END  -->
                     </div>
-                    <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
-                    <!-- Histats.com  START  (aync)-->
-                    <script type="text/javascript">
-                        var _Hasync = _Hasync || [];
-                        _Hasync.push(['Histats.start', '1,4138849,4,428,112,75,00001111']);
-                        _Hasync.push(['Histats.fasi', '1']);
-                        _Hasync.push(['Histats.track_hits', '']);
-                        (function () {
-                            var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-                            hs.src = ('//s10.histats.com/js15_as.js');
-                            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-                        })();</script>
-                    <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4138849&101" alt="" border="0"></a></noscript>
-                    <!-- Histats.com  END  -->
-                </div>
                     <div class="col-md-4  col-sm-12">
                         <div class="row">
                             <div class="col-sm-12">
@@ -298,7 +298,7 @@
                 }
 
                 <div class="col-md-4">
-                    <div id="contact-box" style="text-align: right;">
+                    <div id="contact-box" style="        text-align: right;">
                         @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                         {
                             <div class="fb-page" data-tabs="messages" data-href="@Html.Raw(commonInfo.FaceBookLink)" data-width="500" data-height="300" data-hide-cover="false"></div>
@@ -353,5 +353,100 @@
     </script>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b7a515bc8da872d"></script>
     @Html.Partial("GoogleTranslate")
+    <style>
+        .box-temp-fixed .item-fix {
+            margin-top: 10px;
+            -webkit-transition: all .25s ease-in-out;
+            -moz-transition: all .25s ease-in-out;
+            -o-transition: all .25s ease-in-out;
+            transition: all .25s ease-in-out;
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            z-index: 10;
+        }
+
+        .box-temp-fixed .box-hotline {
+            height: 50px;
+            width: 210px;
+            background: #424242;
+            right: 0;
+            bottom: 0;
+        }
+
+        .box-temp-fixed .item-fix.trans {
+            transform: translate(0px, 0px);
+            -ms-transform: translate(0px, 0px);
+            -webkit-transform: translate(0px, 0px);
+            visibility: visible;
+            filter: alpha(opacity=10);
+            -khtml-opacity: 1;
+            -moz-opacity: 1;
+            opacity: 1;
+            z-index: 9000;
+        }
+
+        .box-temp-fixed .box-hotline label {
+            display: block;
+            position: relative;
+        }
+
+            .box-temp-fixed .box-hotline label a > span {
+                margin: 0 5px 0 -25px;
+                display: inline-block;
+                vertical-align: middle;
+                width: 50px;
+                height: 50px;
+                background: url(//media.anpero.com/images/38/52019/12019051600582675.png) top left no-repeat;
+            }
+
+
+
+            .box-temp-fixed .box-hotline label p {
+                display: inline-block;
+                vertical-align: middle;
+                color: #fff;
+                font-size: 13px;
+                margin: 0;
+                font-weight: normal;
+            }
+
+                .box-temp-fixed .box-hotline label p span {
+                    display: block;
+                }
+
+            .box-temp-fixed .box-hotline label .close-hotline {
+                z-index: 1;
+                position: absolute;
+                top: 14px;
+                right: 10px;
+                display: inline-block;
+                width: 21px;
+                height: 21px;
+                background: url(http://media.anpero.com/images/38/52019/22019051601001429.png) no-repeat;
+                cursor: pointer;
+            }
+    </style>
+    <script>
+        $(document).ready(function () {
+            $(".close-hotline").click(function () {
+                $(".box-temp-fixed").hide();
+            });
+        });
+
+    </script>
+
+    <div class="box-temp-fixed item-fix trans">
+
+        <div class="box-hotline item-fix trans">
+            <label>
+                <a href="tel:@commonInfo.HotLine" title="">
+                    <span></span>
+                    <p>Tư vấn miễn phí(24/7)<span>@Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</span></p>
+                </a>
+                <i class="close-hotline"></i>
+            </label>
+        </div>
+    </div>
 </body>
 </html>
