--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -7,7 +7,7 @@
     }
     string baseUrl = Request.Url.Scheme + "://" + Request.Url.Authority + Request.ApplicationPath.TrimEnd('/');
 }
-@*<div class="top-header">
+<div class="top-header">
     <div class="container">
         <div class="currency"><a href="tel:@commonInfo.HotLine">Click để gọi: @commonInfo.HotLine</a></div>
         <div class="top-bar-social">
@@ -25,7 +25,7 @@
             <a href="javascript:doGTranslate('vi|en');" title="Dịch sang tiếng anh" class="notranslate">English</a>
         </div>
     </div>
-</div>*@
+</div>
 <div class="container main-header">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3 logo">
