--- a/17_Tour/assets/css/hanhtrinh.css
+++ b/17_Tour/assets/css/hanhtrinh.css
@@ -62,9 +62,10 @@
     margin-left:10%;
 }
 .member-img-content .col-md-3 {
-    padding: 0 6% 40px 6%;
+    padding: 0 0 40px 0;
 }
     .member-img-content .col-md-3 img {
         border-radius: 50%;
         width: 100%;
+        padding: 0 18% 0 18%;
     }
