--- a/17_Tour/Views/Product/thuvien.cshtml
+++ b/17_Tour/Views/Product/thuvien.cshtml
@@ -23,63 +23,55 @@
         <link href="//cdn.anpero.com/cdn/plugins/fancybox-3/src/css/core.css" rel="stylesheet" />
         <link href="//cdn.anpero.com/cdn/plugins/fancybox-3/src/css/fullscreen.css" rel="stylesheet" />
         @*<link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/normalize.css" />
-            <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/component.css" />*@
+         <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/component.css" />*@
 
     }
-    @section Styles {
-        <style>
-            .grid.swipe-right li.animate .curtain {
-                animation: swipeRight 1.5s cubic-bezier(0.6,0,0.4,1) forwards;
-            }
+    <div class="container-fluid">
 
-            @@keyframes swipeRight {
-                50%, 60% {
-                    transform: translate(0);
-                }
-
-                100% {
-                    transform: translate3d(100%,0,0);
-                }
-            }
-        </style>
-    }
-
-    if (item.ImagesSlide != null && item.ImagesSlide.Length > 0)
-    {
-        <div class="container-fluid">
-            <div class="text-center gallery" id="gallery">
-                <h1 class="font-bold-play-fair">Gallery</h1>
-                <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom:10vh"></div>
+        @if (item.ImagesSlide != null && item.ImagesSlide.Length > 0)
+        {
+            <div class="text-center" style="margin-top: 10vh;">
+                <h1 class="font-bold-play-fair"><strong>Hành Trình</strong></h1>
+                <h4>Ảnh</h4>
             </div>
-
-            <section class="grid-wrap" id="tab-description">
+            <section class="grid-wrap" id="tab-description" style="margin-top: 7vh;">
                 <div class="grid swipe-right owl-carousel-4 box-slide d-inline-flex" id="grid">
-
                     @foreach (var imagesSlide in item.ImagesSlide)
                     {
-
                         <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide" alt="@item.PrName"></a></div>
                     }
                 </div>
             </section>
-            @if (item.ImagesSlide2 != null && item.ImagesSlide2.Length > 0)
-            {
-                <div class="text-center gallery" style="margin-top:45px;">
-                    <h1 class="font-bold-play-fair">Nhà tài trợ</h1>
-                    <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom:10vh"></div>
+        }
+        <div class="text-center" style="margin-top: 10vh;">
+            <h4>Video</h4>
+            <div id="HT-Slider" style="margin-top: 7vh;" class="container-fluid">
+                <div id="HT-carousel" class="row carousel slide box-slide" data-ride="carousel" data-interval="9000">
+                    @Html.Raw(item.Detail)
                 </div>
-                <section class="grid-wrap" id="tab-description">
-                    <div class="grid swipe-right owl-carousel-6 box-slide d-inline-flex" id="grid">
-                        @foreach (var imagesSlide in item.ImagesSlide2)
-                        {
-                            <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide.ImagesUrl" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide.ImagesUrl" alt="@item.PrName"></a></div>
-                        }
-                    </div>
-                </section>
-            }
+            </div>
         </div>
-    }
-    @Html.Raw(item.Detail)
+
+
+        @if (item.ImagesSlide2 != null && item.ImagesSlide2.Length > 0)
+        {
+
+            <div class="text-center" style="margin-top: 10vh;">
+                <h1 class="font-bold-play-fair"><strong>Sự kiện</strong></h1>
+                <h4>Ảnh</h4>
+            </div>
+            <section class="grid-wrap" id="tab-description">
+                <div class="grid swipe-right owl-carousel-6 box-slide d-inline-flex" id="grid">
+                    @foreach (var imagesSlide in item.ImagesSlide2)
+                    {
+                        <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide.ImagesUrl" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide.ImagesUrl" alt="@item.PrName"></a></div>
+                    }
+                </div>
+            </section>
+        }
+    </div>
+
+
     @section scripts{
         @Html.Raw(item.Script)
         @*<script src="/assets/SamsungGrid/js/modernizr.custom.js"></script>*@
@@ -95,6 +87,17 @@
                 //new GridScrollFx(document.getElementById('grid'), {
                 //    viewportFactor: 0.4
                 //});
+                $('.owl-carousel-3').owlCarousel({
+                    itemsCustom: [
+                        [320, 1],
+                        [600, 1],
+                        [768, 3],
+                        [1024, 3],
+                        [1200, 3]
+                    ],
+                    navigation: true,
+                    autoPlay: true
+                });
                 $(".fancybox").fancybox({
                     openEffect: 'none',
                     closeEffect: 'none'
@@ -131,4 +134,30 @@
             }
         </script>
     }
+}
+@section Styles {
+    <style>
+        .owl-carousel-3 .panel {
+            margin: 0 10px 0 10px;
+        }
+
+            .owl-carousel-3 .panel iframe {
+                width: 100% !important;
+                height: 315px !important;
+            }
+
+        .grid.swipe-right li.animate .curtain {
+            animation: swipeRight 1.5s cubic-bezier(0.6,0,0.4,1) forwards;
+        }
+
+        @@keyframes swipeRight {
+            50%, 60% {
+                transform: translate(0);
+            }
+
+            100% {
+                transform: translate3d(100%,0,0);
+            }
+        }
+    </style>
 }
